# OOP

./: README.md
lab1/: CMakeLists.txt  count.cpp  main.cpp  test_count.cpp
lab1/include/: count.hpp
lab1/src/: count.cpp
lab1/test/: test_count.cpp
lab2/: CMakeLists.txt  four.cpp  four.hpp  main.cpp  test_four.cpp
lab3/: CMakeLists.txt  figure.cpp  figure.hpp  main.cpp  pentagone.cpp  pentagone.hpp  point.cpp  point.hpp  rhomb.cpp  rhomb.hpp  test.cpp  trapezoid.cpp  trapezoid.hpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: array.hpp  figure.hpp  pentagon.hpp  point.hpp  rhomb.hpp  trapezoid.hpp
lab4/test/: test.cpp
lab5/: .gitignore  CMakeLists.txt  main.cpp
lab5/include/: allocator.hpp  forward_list.hpp
lab5/test/: test_forward_list.cpp  test_iterator.cpp
lab6/: CMakeLists.txt  link  log.txt  main.cpp
lab6/headers/: NPC.hpp  elf.hpp  factory.hpp  observers.hpp  outlaw.hpp  squirrel.hpp  visitor.hpp
lab6/src/: NPC.cpp  elf.cpp  outlaw.cpp  squirrel.cpp
lab6/tests/: test_factory.cpp  test_npcs.cpp  test_visitor.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/headers/: NPC.hpp  elf.hpp  factory.hpp  observers.hpp  outlaw.hpp  squirrel.hpp  visitor.hpp
lab7/src/: NPC.cpp  elf.cpp  outlaw.cpp  squirrel.cpp
lab7/tests/: test_factory.cpp  test_npcs.cpp  test_visitor.cpp
